@@ -1,3 +1,7 @@
+version 2.5.14
+--------------
+Thanks to Eric for bug feedback in dar-support mailing-list.
+
 version 2.5.13
 --------------
 Thanks to Volker Wysk for bug report, thanks to Neil Darlow for help in
