@@ -62,7 +62,11 @@ namespace libdar
 				       const cat_entree * obj = nullptr, //< the object to display cat_inode information about
 				       bool list_ea = false);     //< whether to list Extended Attributes
     extern bool extract_base_and_status(unsigned char signature, unsigned char & base, saved_status & saved);
-    extern void local_display_ea(user_interaction & dialog, const cat_inode * ino, const std::string &prefix, const std::string &suffix, bool xml_output = false);
+    extern void local_display_ea(user_interaction & dialog,
+				 const cat_inode * ino,
+				 const std::string &prefix,
+				 const std::string &suffix,
+				 bool xml_output = false);
     extern unsigned char mk_signature(unsigned char base, saved_status state);
     extern void unmk_signature(unsigned char sig, unsigned char & base, saved_status & state, bool isolated);
     extern bool compatible_signature(unsigned char a, unsigned char b);
